--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
       font-weight: 200;
     }
 
-    .txt-live { margin-left: 12px; background: #369aa0; }
+    .txt-live { background: #369aa0; }
     .txt-live:hover { background: #187a80 !important; }
 
     .youtube-btn:hover { background: #000; }
@@ -1876,7 +1876,7 @@
           <a href="assets/tx/tx-2.png" class="glightbox gallery-link tx-btn" data-title="<strong>Structured HTML Output</strong> — generated, standards-compliant table markup ready for direct integration into web workflows">HTML code view</a>
               </div>
 
-            <a href="https://www.youtube.com/watch?v=NJcuGlP4PTw" class="youtube-btn">
+            <a href="https://www.youtube.com/watch?v=NJcuGlP4PTw" class="youtube-btn" style="margin-right: 12px;">
               Watch on <i class="fab fa-youtube"></i> YouTube
             </a>
 
