--- a/index.html
+++ b/index.html
@@ -905,6 +905,8 @@
   .zero-badge { font-size: 1.7em; margin-bottom: 1rem; }
   .elevateTop { display: none; }
   .dropbtn { padding: 0.7rem 0.9rem 0 0; }
+  .header-meta { gap: 2rem; align-items: baseline; }
+  .header-meta .meta-item:first-child { white-space: nowrap; }
 
   .hero-section {
     padding: 2rem 1rem;
