--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       font-family: 'Baloo 2';
       color: white;
       text-shadow: 0px 0px 3px #000;
+      user-select: none;
     }
 
     .logo-dots {
